--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
-# Editor directories and files
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +28,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+Thumbs.db
+
+# Application specific
+server/certificates.json
+server/public/images/
+
+dist
+dist-ssr
+*.local
