--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: abid-ai-portfolio-frontend
     env: node
+    rootDir: .
     buildCommand: npm install && npm run build
     startCommand: npm run preview
     envVars:
@@ -13,8 +14,9 @@ services:
   - type: web
     name: abid-ai-portfolio-backend
     env: node
-    buildCommand: cd server && npm install
-    startCommand: cd server && node index.js
+    rootDir: server
+    buildCommand: npm install
+    startCommand: node index.js
     envVars:
       - key: NODE_ENV
         value: production
